Fix %magic-pseudo-element z-index

--- a/src/sass/core/libraries/_helpers.scss
+++ b/src/sass/core/libraries/_helpers.scss
@@ -6,6 +6,7 @@
     bottom: 0;
     left: 0;
     opacity: 0;
+    z-index: -1;
     border-radius: inherit;
     background-image: inherit;
     background-repeat: inherit;
